// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadMore component tests with isLoading false snapshot testing 1`] = `
<DataList
  aria-label="Simple data list example"
  data-ouia-component-id="load-more-ouia-id"
  data-ouia-component-type="load-more"
  data-ouia-safe={true}
>
  <DataListItem
    aria-labelledby="kie-datalist-item"
  >
    <DataListCell
      className="kogito-common__load-more"
    >
      <Button
        id="load10"
        onClick={[Function]}
        variant="secondary"
      >
        Load 10 more
      </Button>
       
      <Button
        id="load20"
        onClick={[Function]}
        variant="secondary"
      >
        Load 20 more
      </Button>
       
      <Button
        id="load50"
        onClick={[Function]}
        variant="secondary"
      >
        Load 50 more
      </Button>
       
      <Button
        id="load100"
        onClick={[Function]}
        variant="secondary"
      >
        Load 100 more
      </Button>
    </DataListCell>
  </DataListItem>
</DataList>
`;

exports[`LoadMore component tests with isLoading true snapshot testing 1`] = `
<DataList
  aria-label="Simple data list example"
  data-ouia-component-id="load-more-ouia-id"
  data-ouia-component-type="load-more"
  data-ouia-safe={false}
>
  <DataListItem
    aria-labelledby="kie-datalist-item"
  >
    <DataListCell
      className="kogito-common__load-more"
    >
      <Button
        id="loading"
        variant="secondary"
      >
        Loading... 
        <Spinner
          size="md"
        />
      </Button>
    </DataListCell>
  </DataListItem>
</DataList>
`;
